--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "prismjs": "^1.25.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
